--- a/index.html
+++ b/index.html
@@ -1,11 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Homework 3</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <a class="header__logo logo" href="./index.html">
+            <span class="logo__web">Web</span>Studio</a
+          >
 
-</body>
+          <nav class="header__nav nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="#">Студія</a>
+              </li>
+              <li class="nav__item is-active">
+                <a class="nav__link" href="#">Портфоліо</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="header__contacts contacts">
+            <a class="contacts__link--header" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+            <a class="contacts__link--header" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </address>
+        </div>
+      </div>
+    </header>
+    <main class="main">
+      <div class="container">
+        <div class="main__content">
+          <nav class="main__nav nav">
+            <ul class="nav__filters filter">
+              <li class="filter__item is-active-filter">
+                <a class="filter__link" href="#">Усі</a>
+              </li>
+              <li class="filter__item">
+                <a class="filter__link" href="#">Веб-сайти</a>
+              </li>
+              <li class="filter__item">
+                <a class="filter__link" href="#">Додатки</a>
+              </li>
+              <li class="filter__item">
+                <a class="filter__link" href="#">Дизайн</a>
+              </li>
+              <li class="filter__item">
+                <a class="filter__link" href="#">Маркетинг</a>
+              </li>
+            </ul>
+          </nav>
+
+          <section class="main__portfolio portfolio">
+            <ul class="portfolio__list">
+              <li class="portfolio__item project">
+                <img
+                  class="project__image"
+                  src="./images/project--1.jpg
+                "
+                  alt="project item image"
+                />
+                <div class="project__info">
+                  <h3 class="project__name">Технокряк</h3>
+                  <p class="project__description">Веб-сайт</p>
+                </div>
+              </li>
+              <li class="portfolio__item project">
+                <img
+                  class="project__image"
+                  src="./images/project--2.jpg
+                "
+                  alt="project item image"
+                />
+                <div class="project__info">
+                  <h3 class="project__name">
+                    Постер New Orlean vs Golden Star
+                  </h3>
+                  <p class="project__description">Дизайн</p>
+                </div>
+              </li>
+              <li class="portfolio__item project">
+                <img
+                  class="project__image"
+                  src="./images/project--3.jpg
+                "
+                  alt="project item image"
+                />
+                <div class="project__info">
+                  <h3 class="project__name">Ресторан Seafood</h3>
+                  <p class="project__description">Додаток</p>
+                </div>
+              </li>
+              <li class="portfolio__item project">
+                <img
+                  class="project__image"
+                  src="./images/project--4.jpg
+                "
+                  alt="project item image"
+                />
+                <div class="project__info">
+                  <h3 class="project__name">Проєкт Prime</h3>
+                  <p class="project__description">Маркетинг</p>
+                </div>
+              </li>
+              <li class="portfolio__item project">
+                <img
+                  class="project__image"
+                  src="./images/project--5.jpg
+                "
+                  alt="project item image"
+                />
+                <div class="project__info">
+                  <h3 class="project__name">Проєкт Boxes</h3>
+                  <p class="project__description">Додаток</p>
+                </div>
+              </li>
+              <li class="portfolio__item project">
+                <img
+                  class="project__image"
+                  src="./images/project--6.jpg
+                "
+                  alt="project item image"
+                />
+                <div class="project__info">
+                  <h3 class="project__name">Inspiration has no Borders</h3>
+                  <p class="project__description">Веб-сайт</p>
+                </div>
+              </li>
+              <li class="portfolio__item project">
+                <img
+                  class="project__image"
+                  src="./images/project--7.jpg
+                "
+                  alt="project item image"
+                />
+
+                <div class="project__info">
+                  <h3 class="project__name">Видання Limited Edition</h3>
+                  <p class="project__description">Дизайн</p>
+                </div>
+              </li>
+              <li class="portfolio__item project">
+                <img
+                  class="project__image"
+                  src="./images/project--8.jpg
+                "
+                  alt="project item image"
+                />
+                <div class="project__info">
+                  <h3 class="project__name">Проєкт LAB</h3>
+                  <p class="project__description">Маркетинг</p>
+                </div>
+              </li>
+              <li class="portfolio__item project">
+                <img
+                  class="project__image"
+                  src="./images/project--9.jpg"
+                  alt="project item image"
+                />
+                <div class="project__info">
+                  <h3 class="project__name">Growing Business</h3>
+                  <p class="project__description">Додаток</p>
+                </div>
+              </li>
+            </ul>
+          </section>
+        </div>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <a class="footer__logo logo" href="./index.html">
+          <span class="logo__web">Web</span>Studio</a
+        >
+        <address class="footer__contacts contacts">
+          <a
+            class="contacts__link--footer"
+            href="https://maps.app.goo.gl/sZJowedy8QahNWcp7"
+            target="_blank"
+            >м. Київ, пр-т Лесі Українки, 26</a
+          >
+          <a class="contacts__link--footer" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="contacts__link--footer" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </address>
+      </div>
+    </footer>
+  </body>
 </html>
