changed class names,changed image descriptions

--- a/ portfolio.html
+++ b/ portfolio.html
@@ -45,149 +45,149 @@
       </div>
     </header>
     <main class="main section">
-      <div class="container">
+      <div class="main__container container">
         <nav class="main__nav nav">
-          <ul class="nav__filters filter">
-            <li class="filter__item">
-              <a class="filter__link" href="#">Усі</a>
+          <ul class="nav__filters filters">
+            <li class="filters__item">
+              <a class="filters__link" href="#">Усі</a>
             </li>
 
-            <li class="filter__item">
-              <a class="filter__link" href="#">Веб-сайти</a>
+            <li class="filters__item">
+              <a class="filters__link" href="#">Веб-сайти</a>
             </li>
 
-            <li class="filter__item">
-              <a class="filter__link" href="#">Додатки</a>
+            <li class="filters__item">
+              <a class="filters__link" href="#">Додатки</a>
             </li>
 
-            <li class="filter__item">
-              <a class="filter__link" href="#">Дизайн</a>
+            <li class="filters__item">
+              <a class="filters__link" href="#">Дизайн</a>
             </li>
 
-            <li class="filter__item">
-              <a class="filter__link" href="#">Маркетинг</a>
+            <li class="filters__item">
+              <a class="filters__link" href="#">Маркетинг</a>
             </li>
           </ul>
         </nav>
       </div>
 
       <section class="projects">
-        <div class="container">
-          <ul class="projects__list project">
-            <li class="project__item">
+        <div class="projects__container container">
+          <ul class="projects__list">
+            <li class="projects__item">
               <img
-                class="project__image"
+                class="projects__image"
                 src="./images/project--1.jpg"
-                alt="project item image"
+                alt="Technokryak"
                 width="370"
               />
-              <div class="project__info">
-                <h3 class="project__name">Технокряк</h3>
-                <p class="project__description">Веб-сайт</p>
+              <div class="projects__info">
+                <h3 class="projects__name">Технокряк</h3>
+                <p class="projects__description">Веб-сайт</p>
               </div>
             </li>
 
-            <li class="project__item">
+            <li class="projects__item">
               <img
-                class="project__image"
+                class="projects__image"
                 src="./images/project--2.jpg"
-                alt="project item image"
+                alt="Afisha New Orlean"
                 width="370"
               />
-              <div class="project__info">
-                <h3 class="project__name">Постер New Orlean vs Golden Star</h3>
-                <p class="project__description">Дизайн</p>
+              <div class="projects__info">
+                <h3 class="projects__name">Постер New Orlean vs Golden Star</h3>
+                <p class="projects__description">Дизайн</p>
               </div>
             </li>
 
-            <li class="project__item">
+            <li class="projects__item">
               <img
-                class="project__image"
+                class="projects__image"
                 src="./images/project--3.jpg"
-                alt="project item image"
+                alt="Restaurant Seafood"
                 width="370"
               />
-              <div class="project__info">
-                <h3 class="project__name">Ресторан Seafood</h3>
-                <p class="project__description">Додаток</p>
+              <div class="projects__info">
+                <h3 class="projects__name">Ресторан Seafood</h3>
+                <p class="projects__description">Додаток</p>
               </div>
             </li>
 
-            <li class="project__item">
+            <li class="projects__item">
               <img
-                class="project__image"
+                class="projects__image"
                 src="./images/project--4.jpg"
-                alt="project item image"
+                alt="Project Prime"
                 width="370"
               />
-              <div class="project__info">
-                <h3 class="project__name">Проєкт Prime</h3>
-                <p class="project__description">Маркетинг</p>
+              <div class="projects__info">
+                <h3 class="projects__name">Проєкт Prime</h3>
+                <p class="projects__description">Маркетинг</p>
               </div>
             </li>
 
-            <li class="project__item">
+            <li class="projects__item">
               <img
-                class="project__image"
+                class="projects__image"
                 src="./images/project--5.jpg"
-                alt="project item image"
+                alt="Project Boxes"
                 width="370"
               />
-              <div class="project__info">
-                <h3 class="project__name">Проєкт Boxes</h3>
-                <p class="project__description">Додаток</p>
+              <div class="projects__info">
+                <h3 class="projects__name">Проєкт Boxes</h3>
+                <p class="projects__description">Додаток</p>
               </div>
             </li>
 
-            <li class="project__item">
+            <li class="projects__item">
               <img
-                class="project__image"
+                class="projects__image"
                 src="./images/project--6.jpg"
-                alt="project item image"
+                alt="Inspiration has no Borders"
                 width="370"
               />
-              <div class="project__info">
-                <h3 class="project__name">Inspiration has no Borders</h3>
-                <p class="project__description">Веб-сайт</p>
+              <div class="projects__info">
+                <h3 class="projects__name">Inspiration has no Borders</h3>
+                <p class="projects__description">Веб-сайт</p>
               </div>
             </li>
 
-            <li class="project__item">
+            <li class="projects__item">
               <img
-                class="project__image"
+                class="projects__image"
                 src="./images/project--7.jpg"
-                alt="project item image"
+                alt="Limited Edition"
                 width="370"
               />
-              <div class="project__info">
-                <h3 class="project__name">Видання Limited Edition</h3>
-                <p class="project__description">Дизайн</p>
+              <div class="projects__info">
+                <h3 class="projects__name">Видання Limited Edition</h3>
+                <p class="projects__description">Дизайн</p>
               </div>
             </li>
 
-            <li class="project__item">
+            <li class="projects__item">
               <img
-                class="project__image"
+                class="projects__image"
                 src="./images/project--8.jpg"
-                alt="project item image"
+                alt="Project LAB"
                 width="370"
               />
-              <div class="project__info">
-                <h3 class="project__name">Проєкт LAB</h3>
-                <p class="project__description">Маркетинг</p>
+              <div class="projects__info">
+                <h3 class="projects__name">Проєкт LAB</h3>
+                <p class="projects__description">Маркетинг</p>
               </div>
             </li>
 
-            <li class="project__item">
+            <li class="projects__item">
               <img
-                class="project__image"
+                class="projects__image"
                 src="./images/project--9.jpg"
-                alt="project item image"
+                alt="Growing Business"
                 width="370"
               />
-              <div class="project__info">
-                <h3 class="project__name">Growing Business</h3>
-                <p class="project__description">Додаток</p>
+              <div class="projects__info">
+                <h3 class="projects__name">Growing Business</h3>
+                <p class="projects__description">Додаток</p>
               </div>
             </li>
           </ul>
