--- a/ portfolio.html
+++ b/ portfolio.html
@@ -49,7 +49,7 @@
         <nav class="main__nav nav">
           <ul class="nav__filters filters">
             <li class="filters__item">
-              <a class="filters__link" href="#">Усі</a>
+              <a class="filters__link filters__link--active" href="#">Усі</a>
             </li>
 
             <li class="filters__item">
