--- a/ portfolio.html
+++ b/ portfolio.html
@@ -44,150 +44,150 @@
         </div>
       </div>
     </header>
-    <main class="main section">
-      <div class="main__container container">
-        <nav class="main__nav nav">
-          <ul class="nav__filters filters">
-            <li class="filters__item">
-              <a class="filters__link filters__link--active" href="#">Усі</a>
-            </li>
+    <main class="main">
+      <section class="section main__projects projects">
+        <div class="container">
+          <div class="projects__filters filters">
+            <ul class="filters__list">
+              <li class="filters__item">
+                <button class="filters__button filters__button--active">
+                  Усі
+                </button>
+              </li>
 
-            <li class="filters__item">
-              <a class="filters__link" href="#">Веб-сайти</a>
-            </li>
+              <li class="filters__item">
+                <button class="filters__button">Веб-сайти</button>
+              </li>
 
-            <li class="filters__item">
-              <a class="filters__link" href="#">Додатки</a>
-            </li>
+              <li class="filters__item">
+                <button class="filters__button">Додатки</button>
+              </li>
 
-            <li class="filters__item">
-              <a class="filters__link" href="#">Дизайн</a>
-            </li>
+              <li class="filters__item">
+                <button class="filters__button">Дизайн</button>
+              </li>
 
-            <li class="filters__item">
-              <a class="filters__link" href="#">Маркетинг</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+              <li class="filters__item">
+                <button class="filters__button">Маркетинг</button>
+              </li>
+            </ul>
+          </div>
 
-      <section class="projects">
-        <div class="projects__container container">
           <ul class="projects__list">
-            <li class="projects__item">
+            <li class="projects__item project">
               <img
-                class="projects__image"
+                class="project__image"
                 src="./images/project--1.jpg"
                 alt="Technokryak"
                 width="370"
               />
-              <div class="projects__info">
-                <h3 class="projects__name">Технокряк</h3>
-                <p class="projects__description">Веб-сайт</p>
+              <div class="project__info">
+                <h3 class="project__name">Технокряк</h3>
+                <p class="project__description">Веб-сайт</p>
               </div>
             </li>
 
-            <li class="projects__item">
+            <li class="projects__item project">
               <img
-                class="projects__image"
+                class="project__image"
                 src="./images/project--2.jpg"
                 alt="Afisha New Orlean"
                 width="370"
               />
-              <div class="projects__info">
-                <h3 class="projects__name">Постер New Orlean vs Golden Star</h3>
-                <p class="projects__description">Дизайн</p>
+              <div class="project__info">
+                <h3 class="project__name">Постер New Orlean vs Golden Star</h3>
+                <p class="project__description">Дизайн</p>
               </div>
             </li>
 
-            <li class="projects__item">
+            <li class="projects__item project">
               <img
-                class="projects__image"
+                class="project__image"
                 src="./images/project--3.jpg"
                 alt="Restaurant Seafood"
                 width="370"
               />
-              <div class="projects__info">
-                <h3 class="projects__name">Ресторан Seafood</h3>
-                <p class="projects__description">Додаток</p>
+              <div class="project__info">
+                <h3 class="project__name">Ресторан Seafood</h3>
+                <p class="project__description">Додаток</p>
               </div>
             </li>
 
-            <li class="projects__item">
+            <li class="projects__item project">
               <img
-                class="projects__image"
+                class="project__image"
                 src="./images/project--4.jpg"
                 alt="Project Prime"
                 width="370"
               />
-              <div class="projects__info">
-                <h3 class="projects__name">Проєкт Prime</h3>
-                <p class="projects__description">Маркетинг</p>
+              <div class="project__info">
+                <h3 class="project__name">Проєкт Prime</h3>
+                <p class="project__description">Маркетинг</p>
               </div>
             </li>
 
-            <li class="projects__item">
+            <li class="projects__item project">
               <img
-                class="projects__image"
+                class="project__image"
                 src="./images/project--5.jpg"
                 alt="Project Boxes"
                 width="370"
               />
-              <div class="projects__info">
-                <h3 class="projects__name">Проєкт Boxes</h3>
-                <p class="projects__description">Додаток</p>
+              <div class="project__info">
+                <h3 class="project__name">Проєкт Boxes</h3>
+                <p class="project__description">Додаток</p>
               </div>
             </li>
 
-            <li class="projects__item">
+            <li class="projects__item project">
               <img
-                class="projects__image"
+                class="project__image"
                 src="./images/project--6.jpg"
                 alt="Inspiration has no Borders"
                 width="370"
               />
-              <div class="projects__info">
-                <h3 class="projects__name">Inspiration has no Borders</h3>
-                <p class="projects__description">Веб-сайт</p>
+              <div class="project__info">
+                <h3 class="project__name">Inspiration has no Borders</h3>
+                <p class="project__description">Веб-сайт</p>
               </div>
             </li>
 
-            <li class="projects__item">
+            <li class="projects__item project">
               <img
-                class="projects__image"
+                class="project__image"
                 src="./images/project--7.jpg"
                 alt="Limited Edition"
                 width="370"
               />
-              <div class="projects__info">
-                <h3 class="projects__name">Видання Limited Edition</h3>
-                <p class="projects__description">Дизайн</p>
+              <div class="project__info">
+                <h3 class="project__name">Видання Limited Edition</h3>
+                <p class="project__description">Дизайн</p>
               </div>
             </li>
 
-            <li class="projects__item">
+            <li class="projects__item project">
               <img
-                class="projects__image"
+                class="project__image"
                 src="./images/project--8.jpg"
                 alt="Project LAB"
                 width="370"
               />
-              <div class="projects__info">
-                <h3 class="projects__name">Проєкт LAB</h3>
-                <p class="projects__description">Маркетинг</p>
+              <div class="project__info">
+                <h3 class="project__name">Проєкт LAB</h3>
+                <p class="project__description">Маркетинг</p>
               </div>
             </li>
 
-            <li class="projects__item">
+            <li class="projects__item project">
               <img
-                class="projects__image"
+                class="project__image"
                 src="./images/project--9.jpg"
                 alt="Growing Business"
                 width="370"
               />
-              <div class="projects__info">
-                <h3 class="projects__name">Growing Business</h3>
-                <p class="projects__description">Додаток</p>
+              <div class="project__info">
+                <h3 class="project__name">Growing Business</h3>
+                <p class="project__description">Додаток</p>
               </div>
             </li>
           </ul>
