added region with styles for filters

--- a/ portfolio.html
+++ b/ portfolio.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="header header--line">
       <div class="container">
         <div class="header__content">
           <a class="header__logo logo" href="./index.html">
@@ -44,34 +44,36 @@
         </div>
       </div>
     </header>
+
     <main class="main">
-      <section class="section main__projects projects">
+      <section class="section projects">
         <div class="container">
-          <div class="projects__filters filters">
-            <ul class="filters__list">
-              <li class="filters__item">
-                <button class="filters__button filters__button--active">
-                  Усі
-                </button>
-              </li>
+          <ul class="projects__filters filters">
+            <li class="filters__item">
+              <button
+                type="button"
+                class="filters__button filters__button--active"
+              >
+                Усі
+              </button>
+            </li>
 
-              <li class="filters__item">
-                <button class="filters__button">Веб-сайти</button>
-              </li>
+            <li class="filters__item">
+              <button type="button" class="filters__button">Веб-сайти</button>
+            </li>
 
-              <li class="filters__item">
-                <button class="filters__button">Додатки</button>
-              </li>
+            <li class="filters__item">
+              <button type="button" class="filters__button">Додатки</button>
+            </li>
 
-              <li class="filters__item">
-                <button class="filters__button">Дизайн</button>
-              </li>
+            <li class="filters__item">
+              <button type="button" class="filters__button">Дизайн</button>
+            </li>
 
-              <li class="filters__item">
-                <button class="filters__button">Маркетинг</button>
-              </li>
-            </ul>
-          </div>
+            <li class="filters__item">
+              <button type="button" class="filters__button">Маркетинг</button>
+            </li>
+          </ul>
 
           <ul class="projects__list">
             <li class="projects__item project">
