--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
         <div class="container">
           <h2 class="services__title section__title">Чим ми займаємося</h2>
           <ul class="services__list">
-
             <li class="services__item service">
               <img
                 class="service__image"
@@ -124,7 +123,6 @@
         <div class="container">
           <h2 class="team__title section__title">Наша команда</h2>
           <ul class="team__list">
-            
             <li class="team__item person">
               <img
                 class="person__image"
@@ -191,17 +189,20 @@
           <a
             class="contacts__link contacts__link--footer"
             href="https://maps.app.goo.gl/sZJowedy8QahNWcp7"
-            target="_blank">
+            target="_blank"
+          >
             м. Київ, пр-т Лесі Українки, 26
           </a>
           <a
             class="contacts__link contacts__link--footer"
-            href="mailto:info@devstudio.com">
+            href="mailto:info@devstudio.com"
+          >
             info@devstudio.com
           </a>
           <a
             class="contacts__link contacts__link--footer"
-            href="tel:+380961111111">
+            href="tel:+380961111111"
+          >
             +38 096 111 11 11
           </a>
         </address>
