--- a/ portfolio.html
+++ b/ portfolio.html
@@ -26,7 +26,7 @@
                 <a class="nav__link" href="./index.html"> Студія </a>
               </li>
               <li class="nav__item is-active">
-                <a class="nav__link" href="#"> Портфоліо </a>
+                <a class="nav__link" href="./portfolio.html"> Портфоліо </a>
               </li>
               <li class="nav__item">
                 <a class="nav__link" href="#"> Контакти </a>
