--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <header class="header header--line">
+    <header class="header">
       <div class="container">
         <div class="header__content">
           <a class="header__logo logo" href="./index.html">
