--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main class="main">
       <section class="banner">
         <h1 class="banner__title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="banner__button button">Замовити послугу</button>
+        <button class="banner__button button button--blue button--bold">Замовити послугу</button>
       </section>
 
       <section class="section features">
