--- a/portfolio.html
+++ b/portfolio.html
@@ -52,26 +52,46 @@
             <li class="filters__item">
               <button
                 type="button"
-                class="filters__button filters__button--active"
+                class="filters__button filters__button--active button button--small button--blue"
               >
                 Усі
               </button>
             </li>
 
             <li class="filters__item">
-              <button type="button" class="filters__button">Веб-сайти</button>
+              <button
+                type="button"
+                class="filters__button button button--small"
+              >
+                Веб-сайти
+              </button>
             </li>
 
             <li class="filters__item">
-              <button type="button" class="filters__button">Додатки</button>
+              <button
+                type="button"
+                class="filters__button button button--small"
+              >
+                Додатки
+              </button>
             </li>
 
             <li class="filters__item">
-              <button type="button" class="filters__button">Дизайн</button>
+              <button
+                type="button"
+                class="filters__button button button--small"
+              >
+                Дизайн
+              </button>
             </li>
 
             <li class="filters__item">
-              <button type="button" class="filters__button">Маркетинг</button>
+              <button
+                type="button"
+                class="filters__button button button--small"
+              >
+                Маркетинг
+              </button>
             </li>
           </ul>
 
